--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,7 +7,7 @@
     {{ form_errors(registrationForm) }}
 
     <div class="flex flex-row-reverse w-screen h-full justify-between items-center">
-        <div class="flex flex-col px-4 py-4 mx-auto lg:mx-0 lg:px-14 w-96">
+        <div class="flex flex-col w-[500px] lg:min-w-[500px] px-4 py-4 mx-auto lg:mx-0 lg:px-14">
             <div class="flex flex-col flex-1">
                 <img class="h-14 w-14" src="{{ asset('images/logo.png') }}"
                      alt="Handicar">
@@ -21,10 +21,55 @@
                         <label for="registration_form_email"
                                class="block text-sm font-medium leading-6 text-gray-900">Email</label>
                         <div class="mt-2">
-                            {{ form_widget(registrationForm.email, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
-                            {% if registrationForm.email.vars.errors is not empty %}
+                            {{ form_widget(registrationForm.user.email, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
+                            {% if registrationForm.user.email.vars.errors is not empty %}
                                 <ul class="text-red-600">
-                                    {% for error in registrationForm.email.vars.errors %}
+                                    {% for error in registrationForm.user.email.vars.errors %}
+                                        <li>{{ error.message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        </div>
+                    </div>
+
+                    <div>
+                        <label for="registration_form_nom"
+                               class="block text-sm font-medium leading-6 text-gray-900">Nom</label>
+                        <div class="mt-2">
+                            {{ form_widget(registrationForm.user.nom, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
+                            {% if registrationForm.user.nom.vars.errors is not empty %}
+                                <ul class="text-red-600">
+                                    {% for error in registrationForm.user.nom.vars.errors %}
+                                        <li>{{ error.message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        </div>
+                    </div>
+
+                    <div>
+                        <label for="registration_form_prenom"
+                               class="block text-sm font-medium leading-6 text-gray-900">Prénom</label>
+                        <div class="mt-2">
+                            {{ form_widget(registrationForm.user.prenom, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
+                            {% if registrationForm.user.prenom.vars.errors is not empty %}
+                                <ul class="text-red-600">
+                                    {% for error in registrationForm.user.prenom.vars.errors %}
+                                        <li>{{ error.message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        </div>
+                    </div>
+
+                    <div>
+                        <label for="registration_form_date_de_naissance"
+                               class="block text-sm font-medium leading-6 text-gray-900">Date de naissance</label>
+                        <div class="mt-2">
+                            {{ form_widget(registrationForm.user.date_de_naissance, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
+                            {% if registrationForm.user.date_de_naissance.vars.errors is not empty %}
+                                <ul class="text-red-600">
+                                    {% for error in registrationForm.user.date_de_naissance.vars.errors %}
                                         <li>{{ error.message }}</li>
                                     {% endfor %}
                                 </ul>
@@ -36,10 +81,10 @@
                         <label for="registration_form_password_first"
                                class="block text-sm font-medium leading-6 text-gray-900">Mot de passe</label>
                         <div class="mt-2">
-                            {{ form_widget(registrationForm.password.first, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
-                            {% if registrationForm.password.first.vars.errors is not empty %}
+                            {{ form_widget(registrationForm.user.password.first, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
+                            {% if registrationForm.user.password.first.vars.errors is not empty %}
                                 <ul class="text-red-600">
-                                    {% for error in registrationForm.password.first.vars.errors %}
+                                    {% for error in registrationForm.user.password.first.vars.errors %}
                                         <li>{{ error.message }}</li>
                                     {% endfor %}
                                 </ul>
@@ -52,10 +97,10 @@
                                class="block text-sm font-medium leading-6 text-gray-900">Confirmer le mot de
                             passe</label>
                         <div class="mt-2">
-                            {{ form_widget(registrationForm.password.second, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
-                            {% if registrationForm.password.second.vars.errors is not empty %}
+                            {{ form_widget(registrationForm.user.password.second, {'attr': {'class': 'block w-full rounded-md border-0 px-2 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6'}}) }}
+                            {% if registrationForm.user.password.second.vars.errors is not empty %}
                                 <ul class="text-red-600">
-                                    {% for error in registrationForm.password.second.vars.errors %}
+                                    {% for error in registrationForm.user.password.second.vars.errors %}
                                         <li>{{ error.message }}</li>
                                     {% endfor %}
                                 </ul>
@@ -64,17 +109,16 @@
                     </div>
 
                     <div class="flex items-center gap-2">
-                        {{ form_errors(registrationForm.agreeTerms) }}
-                        {{ form_widget(registrationForm.agreeTerms, {'attr': {'class': 'h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600'}}) }}
+                        {{ form_errors(registrationForm.user.agreeTerms) }}
+                        {{ form_widget(registrationForm.user.agreeTerms, {'attr': {'class': 'h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600'}}) }}
                         <label for="registration_form_agreeTerms" class="block text-sm leading-6 text-gray-700">J'accepte
-                            les <a
-                                    href="#">conditions d'utilisation</a></label>
+                            conditions d'utilisation</label>
                     </div>
 
                     <div>
                         <button type="submit"
                                 class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
-                            Se connecter
+                            Créer un compte
                         </button>
                     </div>
                     {{ form_end(registrationForm) }}
