--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>{% block title %}Bienvenue{% endblock %} | Handicar</title>
-        <link rel="icon" href="{{ asset("/images/icon.ico") }}">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>{% block title %}Bienvenue{% endblock %} | Handicar</title>
+    <link rel="icon" href="{{ asset("/images/icon.ico") }}">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+    {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body class="flex w-screen h-screen items-center justify-center font-primary">
-        {% block body %}{% endblock %}
-    </body>
+    {% block javascripts %}
+        {{ encore_entry_script_tags('app') }}
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+    {% endblock %}
+</head>
+<body class="flex flex-col w-screen font-primary">
+{% block header %}{% endblock %}
+<main class="w-full">
+    {% block main %}{% endblock %}
+</main>
+{% block footer %}{% endblock %}
+</body>
 </html>
