--- a/templates/landing_page/header.html.twig
+++ b/templates/landing_page/header.html.twig
@@ -1,4 +1,4 @@
-<header class="w-full flex justify-between items-center p-3">
+<header class="w-full flex justify-between items-center py-3 px-6">
     <img src="{{ asset('images/logo.png') }}" alt="" class="w-[73px] h-[55px]">
     <div class="text-[14px] text-[#90E0EF] flex items-center gap-10">
         <a href="">
