--- a/templates/landing_page/index.html.twig
+++ b/templates/landing_page/index.html.twig
@@ -31,9 +31,10 @@
                         </div>
                         <hr class="bg-[#DEDEDE]">
                         <div class="font-bold text-[24px] text-center">
-                            <span class="text-[#00AFF5] shadow-2xl">Economisez</span> et rendez
-                            <p>services autour de</p>
-                            <p>vous</p>
+                            <span class="text-[#00AFF5] shadow-2xl">Economisez</span> et rendez <br>
+                            services autour de
+                            <br>
+                            vous
                         </div>
                     </div>
                     <div class="rounded-b-2xl bg-[#00AFF5] text-center py-5 text-[#FFFFFF]">
